--- a/PetSinc/nbproject/project.properties
+++ b/PetSinc/nbproject/project.properties
@@ -28,8 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.gson-2.3.1.jar=/home/ad/Desenvolvimento/Bibliotecas/gson-2.3.1.jar
-file.reference.mysql-connector-java-5.1.9.jar=/home/ad/Desenvolvimento/Bibliotecas/mysql-connector-java-5.1.9.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,9 +41,7 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=\
-    ${file.reference.gson-2.3.1.jar}:\
-    ${file.reference.mysql-connector-java-5.1.9.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -72,10 +68,10 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
-rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
